Created all the objects. Objects everytwhere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ set( SOURCES
         ${CMAKE_SOURCE_DIR}/src/Dealer.cpp
         ${CMAKE_SOURCE_DIR}/src/Deck.cpp
         ${CMAKE_SOURCE_DIR}/src/DeckUtils.cpp
+        ${CMAKE_SOURCE_DIR}/src/Gui.cpp
+        ${CMAKE_SOURCE_DIR}/src/Button.cpp
+        ${CMAKE_SOURCE_DIR}/src/Banner.cpp
      )
 
 find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
